# smartassist-ai-workshop

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  start.bat  start.sh
.github/workflows/: ci.yml
docs/: architektura.md  backlog.md  harmonogram.md  odhady-pracnosti.md  rizika.md  rozpocet.md  smlouva.md
docs/zapisy/: 2026-01-15-kickoff.md  2026-01-29-sprint-review-1.md  2026-02-12-sprint-review-2.md  2026-02-15-kickoff.md  2026-02-26-sprint-review-3.md  2026-02-28-sprint-review-1.md  2026-03-05-escalation-call.md  2026-03-12-sprint-review-2.md  2026-03-26-sprint-review-3.md  2026-04-05-escalation-call.md
src/smartassist/: agent.py  config.py  main.py
src/smartassist/frontend/app/: index.html  package-lock.json  package.json  vite.config.ts
src/smartassist/frontend/app/src/: App.css  App.tsx  index.css
src/smartassist/frontend/app/src/components/: AdminDialog.tsx  ChatInput.tsx  ChatMessage.tsx  Sidebar.tsx  TypingIndicator.tsx
src/smartassist/frontend/app/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  scroll-area.tsx  separator.tsx  slot.tsx  tooltip.tsx
src/smartassist/integrations/: crm.py  multilang.py  zendesk.py
src/smartassist/knowledge/: indexer.py  retriever.py
src/smartassist/knowledge/documents/: objednavky-faq.md  produkty.md  reklamace.md
tests/: test_agent.py  test_api.py
