[project]
name = "smartassist-ai"
version = "0.3.0"
description = "SmartAssist AI - Intelligent customer support chatbot for NovaTech"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pydantic-ai>=0.1",
    "qdrant-client>=1.13",
    "openai>=1.60",
    "httpx>=0.28",
    "python-multipart>=0.0.18",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.11",
    "mypy>=1.14",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smartassist"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
